<resources>
    <string name="app_name">TeamNex</string>
    <string name="menu_home">Главная</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="settings_title">Общие</string>
    <string name="settings_language_title">Язык</string>
    <string name="settings_bottom_dialog_title">Выберите язык</string>
    <string name="feedback_text">По всем вопросам и предложениям обращаться по почте:</string>
    <string name="feedback_copy_text">Email скопирован в буфер обмена</string>
    <string name="login_title">Авторизация</string>
    <string name="login_password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_text_bottom">Еще нет аккаунта?</string>
    <string name="login_button_register">Зарегистрироваться</string>
    <string name="login_error_email">Введите свой email</string>
    <string name="login_error_password">Введите пароль</string>
    <string name="login_loading">Заходим в аккаунт…</string>
    <string name="login_complete">Вы успешно авторизовались!</string>
    <string name="login_error_user">Пользователь с таким email не найден</string>
    <string name="login_error_incorrect">Введены неверные данные</string>
    <string name="login_email_title">Ваш email не подтвержден</string>
    <string name="login_email_text">Для авторизации необходимо подтвердить email, проверьте указанную почту и перейдите по ссылке в отправленном письме</string>
    <string name="login_email_button">Хорошо</string>
    <string name="login_register">Зарегистрироваться</string>
    <string name="reset_title">Восстановление пароля</string>
    <string name="reset_text">Введите email адрес который вы указывали при регистрации</string>
    <string name="reset_button">Продолжить</string>
    <string name="reset_error">Введите email</string>
    <string name="reset_loading">Подождите немного…</string>
    <string name="reset_dialog_title">Сброс пароля</string>
    <string name="reset_dialog_text">На указанную почту было отправлено письмо с ссылкой для сброса пароля</string>
    <string name="reset_dialog_button">Хорошо</string>
    <string name="reset_error_user">Пользователь с таким email не найден</string>
    <string name="register_title">Регистрация</string>
    <string name="register_name">Имя</string>
    <string name="register_password">Пароль</string>
    <string name="register_confirm_password">Повторите пароль</string>
    <string name="register_button_continue">Продолжить</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_error_name">Введите свое имя</string>
    <string name="register_error_email">Введите email</string>
    <string name="register_error_password">Введите пароль</string>
    <string name="register_error_password_again">Повторите введенный пароль</string>
    <string name="register_error_password_not_match">Пароли не совпадают</string>
    <string name="register_error_min_password">Минимальная длина пароля: 7</string>
    <string name="register_privacy_policy">Регистрируясь, вы соглашаетесь с Политикой конфиденциальности TeamNex</string>
    <string name="register_privacy_policy_link">Политикой конфиденциальности</string>
    <string name="register_loading">Регистрируем вас…</string>
    <string name="register_action_error_password">Пароль слишком слабый</string>
    <string name="register_action_email">Email введен некорректно</string>
    <string name="register_action_email_already">Пользователь с таким email уже зарегестрирован</string>
    <string name="register_dialog_title">Вы успешно зарегистрировались!</string>
    <string name="register_dialog_text">На указанную почту было отправлено письмо с ссылкой для подтверждения, для авторизации в приложении необходимо перейти по этой ссылке. Проверяйте папку СПАМ.</string>
    <string name="register_dialog_button">Хорошо</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_name">Имя</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_teamnex_pro">Подписка TeamNex Pro</string>
    <string name="profile_notifications">Уведомления</string>
    <string name="profile_privacy_policy_link">Политика конфидециальности</string>
    <string name="profile_site_link">Информационный сайт TeamNex</string>
    <string name="profile_exit">ВЫЙТИ</string>
    <string name="profile_delete">УДАЛИТЬ АККАУНТ</string>
    <string name="profile_photo_title">Фото профиля</string>
    <string name="profile_photo_change">Изменить</string>
    <string name="profile_photo_delete">Удалить</string>
    <string name="profile_photo_dialog_title">Новое фото профиля</string>
    <string name="profile_photo_button_save">Сохранить</string>
    <string name="profile_photo_button_cancel">Отмена</string>
    <string name="profile_photo_loading">Загружаем фото…</string>
    <string name="profile_photo_success">Изображение успешно загружено!</string>
    <string name="profile_photo_delete_dialog_title">Удаление фото профиля</string>
    <string name="profile_photo_delete_dialog_text">Вы действительно хотите удалить фото профиля?</string>
    <string name="profile_photo_delete_dialog_loading">Удаляем изображение…</string>
    <string name="profile_photo_delete_dialog_success">Изображение успешно удалено!</string>
    <string name="profile_name_title">Имя пользователя</string>
    <string name="profile_name_error">Введите свое имя</string>
    <string name="profile_name_button_update">Обновить</string>
    <string name="profile_name_loading">Обновляем данные…</string>
    <string name="profile_name_success">Профиль успешно обновлен</string>
    <string name="profile_password1_title">Изменение пароля</string>
    <string name="profile_password1_hint">Текущий пароль</string>
    <string name="profile_password1_error">Введите ваш текущий пароль</string>
    <string name="profile_password1_error2">Неверный пароль</string>
    <string name="profile_password1_dialog">Проверяем пароль…</string>
    <string name="profile_password2_title">Новый пароль</string>
    <string name="profile_password2_button">Сохранить</string>
    <string name="profile_password2_dialog">Меняем пароль…</string>
    <string name="profile_password_success">Новый пароль успешно установлен!</string>
    <string name="profile_exit_title">Выход из аккаунта</string>
    <string name="profile_exit_text">Вы действительно хотите выйти из аккаунта?</string>
    <string name="profile_exit_complete">Вы успешно вышли!</string>
    <string name="profile_exit_yes">Да</string>
    <string name="profile_exit_no">Нет</string>
    <string name="profile_delete_title">Удаление аккаунта</string>
    <string name="profile_delete_text_title">Аккаунт невозможно будет восстановить</string>
    <string name="profile_delete_text_main">Будет удален ваш аккаунт и все созданные вами доски, а также вы будете удалены из всех досок других пользователей, к которым вы были ранее подключены</string>
    <string name="profile_delete_password_text">Для удаления аккаунта введите ваш текущий пароль</string>
    <string name="profile_delete_button_delete">Удалить аккаунт</string>
    <string name="profile_delete_button_cancel">Отмена</string>
    <string name="profile_delete_dialog_title">Удаление аккаунта</string>
    <string name="profile_delete_dialog_text">Вы точно уверены что хотите удалить аккаунт? Это действие является безвозвратным!</string>
    <string name="profile_delete_dialog_button_cancel">Отмена</string>
    <string name="profile_delete_dialog_button_delete">Удалить мой аккаунт</string>
    <string name="profile_delete_dialog_wait">Удаляем аккаунт…</string>
    <string name="profile_delete_success">Аккаунт успешно удален!</string>
    <string name="board_title">Доски</string>
    <string name="board_button_connect">Подключиться</string>
    <string name="board_search">Поиск</string>
    <string name="board_button_create">Создать</string>
    <string name="board_dialog_connect_title">Подключение</string>
    <string name="board_dialog_connect_hint">Код подключения</string>
    <string name="board_dialog_connect_text">Подключиться</string>
    <string name="board_dialog_connect_error">Введите 8-ми значный код</string>
    <string name="board_dialog_create_loading">Создаем доску…</string>
    <string name="board_dialog_connect_complete">Вы успешно подключились к доске</string>
    <string name="board_dialog_connect_error_already">Вы уже подключены к данной доске</string>
    <string name="board_dialog_connect_error_not_found">Доска с таким кодом не найдена</string>
    <string name="board_dialog_connect_error_unknown">Ошибка при подключении пользователя к доске</string>
    <string name="board_dialog_create_title">Новая доска</string>
    <string name="board_dialog_create_hint">Введите название</string>
    <string name="board_dialog_create_error">Введите название</string>
    <string name="board_time_minute1">" минуту назад"</string>
    <string name="board_time_minute2">" минуты назад"</string>
    <string name="board_time_minute3">" минут назад"</string>
    <string name="board_time_hour1">" час назад"</string>
    <string name="board_time_hour2">" часа назад"</string>
    <string name="board_time_hour3">" часов назад"</string>
    <string name="board_time_day1">" день назад"</string>
    <string name="board_time_day2">" дня назад"</string>
    <string name="board_time_day3">" дней назад"</string>
    <string name="board_settings_title">Настройки</string>
    <string name="board_settings_info">Информация</string>
    <string name="board_settings_info_owner">Владелец:</string>
    <string name="board_settings_info_created">Создано:</string>
    <string name="board_settings_code">Код доступа</string>
    <string name="board_settings_code_text">Код скопирован в буфер обмена</string>
    <string name="board_settings_show_qr">Показать</string>
    <string name="board_settings_delete_button">Удалить доску</string>
    <string name="board_settings_disconnect_button">Отключиться</string>
    <string name="board_settings_dialog_delete_title">Удаление доски</string>
    <string name="board_settings_dialog_delete_text">Вы уверены что хотите удалить доску? Это действие является безвозвратным!</string>
    <string name="board_settings_disconnect_dialog_title">Отключение</string>
    <string name="board_settings_disconnect_dialog_text">Вы уверены что хотите отключиться от этой доски?</string>
    <string name="board_settings_disconnect_dialog_cancel">Отмена</string>
    <string name="board_settings_disconnect_dialog_accept">Отключиться</string>
    <string name="board_settings_edit">Изменить</string>
    <string name="board_settings_timer_title">Таймер</string>
    <string name="board_settings_choose_image">Выберите изображение</string>
    <string name="board_settings_edit_name_error">Введите название</string>
    <string name="board_settings_qr_dialog">Отсканируйте QR-код в приложении</string>
    <string name="workspace_button_add_item">Добавить пункт</string>
    <string name="workspace_dialog_add_item_title">Новый пункт</string>
    <string name="workspace_dialog_delete_item_title">Удаление пункта</string>
    <string name="workspace_dialog_delete_item_text">Вы уверены что хотите удалить пункт? Это действие является безвозвратным!</string>
    <string name="workspace_dialog_edit_item_title">Изменить навзвание</string>
    <string name="workspace_button_add_card">Добавить карточку</string>
    <string name="workspace_dialog_add_card_title">Новая карточка</string>
    <string name="users_activity_title">Участники</string>
    <string name="users_activity_list_admin">Админ</string>
    <string name="users_activity_list_owner">Владелец</string>
    <string name="users_activity_list_member">Участник</string>
    <string name="users_activity_dialog_role_title">Выбор роли</string>
</resources>