<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/titleBoards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/board_title"
        android:textSize="25sp"
        android:textColor="@color/md_theme_onSurface_highContrast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/board_button_connect"
        app:layout_constraintBottom_toBottomOf="@+id/titleBoards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleBoards" />

    <ImageButton
        android:id="@+id/boardsRefresh"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/corner_black_small"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="@+id/BoardSearchLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BoardSearchLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BoardSearchLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/workspace_item_gray_16dp"
        app:layout_constraintEnd_toStartOf="@+id/boardsRefresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/search_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/BoardSearchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/board_search"
            android:inputType="text"
            android:textColorHint="#AFAFAF"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BoardSearchCloseButton"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/BoardSearchCloseButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/listViewBoards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:clickable="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoardSearchLayout" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginBottom="14dp"
        android:drawableLeft="@drawable/plus_small"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/board_button_create"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>